     
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment"
    android:alpha="1">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/origem" />

      <RadioGroup
        android:id="@+id/radioOrigem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        >
        <RadioButton
            android:id="@+id/radioOrigemColetaSistematica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_origem_coleta_sistematica"
            android:checked="true" 
        />
 
        <RadioButton
            android:id="@+id/radioOrigemColetaAssistematica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_origem_coleta_assistematica" />
        <RadioButton
           android:id="@+id/radioOrigemPocoTeste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_origem_poco_teste" />
        <RadioButton
            android:id="@+id/radioOrigemSondagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_orgiem_sondagem" />
        <RadioButton
            android:id="@+id/radioOrigemQuadricula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_origem_quadricula" />
        <RadioButton
            android:id="@+id/radioOrigemTrincheira"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_origem_trincheira" />
        <RadioButton
            android:id="@+id/radioOrigemOutra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_origem_outra" />
    </RadioGroup>

      <EditText
          android:id="@+id/textOrigemOutra"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:ems="10" 
          android:visibility="invisible"
          android:inputType="textAutoComplete"
          >

          <requestFocus />
      </EditText>

</RelativeLayout>