<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item android:id="@+id/load"
          android:title="@string/buttons"
          android:icon="@drawable/ic_action"
          android:showAsAction="always"/>
    
    <item 
          android:id="@+id/action_new"
          android:icon="@drawable/ic_add_white_24dp"
          android:title="@string/action_collect_pages"
          android:showAsAction="always"/>
    
    <item 
          android:id="@+id/action_edit"
          android:icon="@drawable/ic_add_white_24dp"
          android:title="@string/action_collect_pages"
          android:visible="false"/>    
    <!--  item 
          android:id="@+id/action_map"
          android:icon="@drawable/mapicon"
          android:title="@string/action_map"
          android:showAsAction="always"/-->
    
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    
    

</menu>
