<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <TextView
        android:id="@+id/textViewProjetoNoSitio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewS2"
        android:layout_alignBottom="@+id/textViewS2"
        android:layout_toRightOf="@+id/textViewS2"
        android:ems="10" />

    <TextView
        android:id="@+id/textViewEtapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewS3"
        android:layout_alignBottom="@+id/textViewS3"
        android:layout_alignLeft="@+id/textViewProjetoNoSitio"
        android:ems="10" />

    <TextView
        android:id="@+id/textViewSitio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewS1"
        android:layout_alignBottom="@+id/textViewS1"
        android:layout_toRightOf="@+id/textViewS2"
        android:ems="10" />

    <TextView
        android:id="@+id/textViewS3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewS2"
        android:layout_below="@+id/textViewS2"
        android:layout_marginTop="17dp"
        android:text="@string/etapa" />

    <TextView
        android:id="@+id/textViewS2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewS1"
        android:layout_below="@+id/textViewS1"
        android:layout_marginTop="14dp"
        android:text="@string/projeto_no_sitio" />

    <TextView
        android:id="@+id/textViewS1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="15dp"
        android:tag="sitio_tag"
        android:text="@string/sitio" />

</RelativeLayout>